replace .html file

--- a/PA1_template.html
+++ b/PA1_template.html
@@ -142,12 +142,10 @@ list.files(path = &quot;/Users/ramyabalasubramaniam&quot;)</code></pre>
 ## [15] &quot;Library&quot;                 &quot;Movies&quot;                 
 ## [17] &quot;Music&quot;                   &quot;newhist_comp.png&quot;       
 ## [19] &quot;PA1_template.html&quot;       &quot;PA1_template.md&quot;        
-## [21] &quot;PA1_template.Rmd&quot;        &quot;PA2_template.html&quot;      
-## [23] &quot;PA2_template.md&quot;         &quot;PA2_template.Rmd&quot;       
-## [25] &quot;Pattern_Week.png&quot;        &quot;Pictures&quot;               
-## [27] &quot;Public&quot;                  &quot;R files&quot;                
-## [29] &quot;RepData_PeerAssessment1&quot; &quot;SOFTWARE&quot;               
-## [31] &quot;TS_avgsteps.png&quot;</code></pre>
+## [21] &quot;PA1_template.Rmd&quot;        &quot;Pattern_Week.png&quot;       
+## [23] &quot;Pictures&quot;                &quot;Public&quot;                 
+## [25] &quot;R files&quot;                 &quot;RepData_PeerAssessment1&quot;
+## [27] &quot;SOFTWARE&quot;                &quot;TS_avgsteps.png&quot;</code></pre>
 <pre class="r"><code>unzip(zipfile = &quot;/Users/ramyabalasubramaniam/data_activity.zip&quot;,exdir = &quot;data_activity&quot;)
 act &lt;- read.csv(file = &quot;data_activity/activity.csv&quot;)</code></pre>
 </div>
